# nawex-ai-ml-infrastructure

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md
.github/workflows/: build-images.yml  ci.yml  security.yml  sloth.yml
apps/ingest-worker/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/ingest-worker/airflow/dags/: ingest_dag.py
apps/ingest-worker/src/ingest_worker/: chunker.py  config.py  embedder.py  main.py  metrics.py  pipeline.py  store.py
apps/ingest-worker/tests/: test_chunker.py  test_pipeline.py
apps/rag-api/: Dockerfile  README.md  go.mod
argocd/: README.md
argocd/clusters/dev-eks/: apps.yaml  image-updater.yaml  root-app.yaml  (+1 more)
argocd/infrastructure/: cert-manager.yaml  external-secrets.yaml  ingress-nginx.yaml  keda.yaml
argocd/install/: kustomization.yaml  namespace.yaml
argocd/projects/: rag-platform.yaml
docs/: slo-policy.md
docs/adr/: 0001-multi-cloud-strategy.md  0002-gitops-with-flux.md  0003-observability-stack.md  0004-storage-classes.md  0005-mlops-tooling.md  README.md
docs/runbooks/: README.md  node-not-ready.md  pvc-almost-full.md  rag-api-high-error-rate.md  rag-api-high-latency.md  vector-db-oom.md
flux/: README.md
observability/: README.md
observability/prometheus/: kustomization.yaml  platform-rules.yaml
observability/slo/: ingest-worker.slo.yaml  kustomization.yaml  rag-api.slo.yaml
scripts/: bootstrap-cluster.sh
scripts/chaos/: pod-killer.sh
scripts/self-healing/: README.md  crashloop-bouncer.sh  pvc-resizer.go
terraform/: README.md
(+92 files in other folders)
