[project]
name = "ingest-worker"
version = "0.1.0"
description = "Document ingest worker for the RAG platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "prometheus-client>=0.20",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "qdrant-client>=1.10",
  "mlflow>=2.14",
  "structlog>=24.1",
  "tenacity>=8.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]
airflow = [
  "apache-airflow>=2.9",
]

[project.scripts]
ingest-worker = "ingest_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest_worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
